<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_black2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/defaultServerPageTopLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_server_conf"
                android:textColor="@color/custom_gray"
                android:textAlignment="center"
                android:layout_marginBottom="15dp"
                android:textSize="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/local_ip"
                android:textColor="@color/custom_gray"
                android:textSize="19dp"/>

            <EditText
                android:id="@+id/defaultServerLocalIpEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="192.168.1.1"
                android:paddingBottom="20dp"
                android:paddingStart="0dp"
                android:backgroundTint="@color/custom_edit_text_simple"
                android:enabled="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Port"
                android:textColor="@color/custom_gray"
                android:textSize="19dp"
                android:layout_marginTop="15dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="49761"
                android:paddingBottom="20dp"
                android:paddingStart="0dp"
                android:inputType="number"
                android:maxLength="4"
                android:enabled="false"
                android:backgroundTint="@color/custom_edit_text_simple"/>

            <LinearLayout
                android:id="@+id/authRandomCodeLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                android:visibility="gone">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auth_explain"
                    android:textColor="@color/custom_gray"
                    android:textSize="19dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/custom_border_gray"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/authCodeText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="----"
                        android:textColor="@color/custom_gray"
                        android:textSize="29dp"
                        android:textAlignment="center"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingEnd="5dp"
                        android:paddingStart="5dp"/>

                    <ImageView
                        android:id="@+id/refreshIcon"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:visibility="gone"
                        android:src="@drawable/custom_refresh_icon_gray"/>
                </LinearLayout>

                <ProgressBar
                    android:id="@+id/authCodeProgress"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:progressDrawable="@drawable/custom_progressbar"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:progress="100"
                    android:max="100"
                    android:min="0"/>
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/advancedSettingsRelativeLayoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/defaultServerPageTopLinear"
            android:layout_marginTop="30dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/custom_border">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/advanced_settings"
                android:textColor="@color/custom_gray"
                android:textSize="19dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="0dp"
                android:src="@drawable/arrow_drop_down_gray" />

            <LinearLayout
                android:id="@+id/dropDownLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/textView1"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/lorem_ipsum_5word"
                    android:textColor="@color/custom_gray"
                    android:textSize="19sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/lorem_ipsum_5word"
                    android:textColor="@color/custom_gray"
                    android:textSize="19sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/lorem_ipsum_5word"
                    android:textColor="@color/custom_gray"
                    android:textSize="19sp" />

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>




</ScrollView>